--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ version = '1.0.0-SNAPSHOT'
 ext.versions += [
         eclipselink: '2.6.3',
         resteasy   : '3.0.16.Final',
-        guice      : '4.0'
+        guice      : '4.0',
+        metrics      : '3.1.2',
+        metricsguice : '3.1.3'
 ]
 
 dependencies {
@@ -23,10 +25,15 @@ dependencies {
             "org.eclipse.persistence:eclipselink:${versions.eclipselink}",
             "com.google.inject:guice:${versions.guice}",
             "com.google.inject.extensions:guice-servlet:${versions.guice}",
+            "com.google.inject.extensions:guice-multibindings:${versions.guice}",
             "com.google.inject.extensions:guice-assistedinject:${versions.guice}",
             "org.jboss.resteasy:resteasy-jaxrs:${versions.resteasy}",
             "org.jboss.resteasy:resteasy-guice:${versions.resteasy}",
-            "ch.qos.logback:logback-access:${versions.logback}"
+            "ch.qos.logback:logback-access:${versions.logback}",
+            "io.dropwizard.metrics:metrics-core:${versions.metrics}",
+            "io.dropwizard.metrics:metrics-jvm:${versions.metrics}",
+            "io.dropwizard.metrics:metrics-servlets:${versions.metrics}",
+            "com.palominolabs.metrics:metrics-guice:${versions.metricsguice}"
     )
 
     testCompile(
