Added a state machine implementation, moved http client code from acuo-valuation into here and added a margin call model

--- a/gradle/java-plugins.gradle
+++ b/gradle/java-plugins.gradle
@@ -6,6 +6,10 @@ apply plugin:'project-report'
 apply plugin:'maven-publish'
 apply plugin:'jacoco'
 
+compileJava {
+	options.compilerArgs << '-parameters'
+}
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
