--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,12 @@ group = 'com.acuo.collateral'
 version = '0.0.1-SNAPSHOT'
 
 ext.versions += [
-        eclipselink: '2.6.3',
-        resteasy   : '3.0.16.Final',
-        guice      : '4.0',
+        eclipselink  : '2.6.3',
+        resteasy     : '3.0.16.Final',
+        guice        : '4.0',
         metrics      : '3.1.2',
-        metricsguice : '3.1.3'
+        metricsguice : '3.1.3',
+        okhttp       : '3.3.1',
 ]
 
 dependencies {
@@ -54,12 +55,14 @@ dependencies {
             "com.palominolabs.metrics:metrics-guice:${versions.metricsguice}",
             "org.jasypt:jasypt:1.9.2",
             "com.opengamma.strata:strata-basics:1.0.0",
-            "com.opengamma.strata:strata-product:1.0.0"
+            "com.opengamma.strata:strata-product:1.0.0",
+            "com.squareup.okhttp3:okhttp:${versions.okhttp}"
     )
 
     testCompile(
             "com.tngtech.java:junit-dataprovider:1.10.4",
             "org.apache.httpcomponents:httpclient:4.3.3",
-            "org.easymock:easymock:3.3"
+            "org.easymock:easymock:3.3",
+            "com.squareup.okhttp3:mockwebserver:${versions.okhttp}",
     )
 }
