--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven {
-        url "http://192.168.1.70:8081/repository/maven-public/"
+        url "https://nexus.acuo.com/repository/maven-public/"
     }
 }
 
