fixed gradlew build by passing the java compiler option '-parameters'

--- a/gradle/java-plugins.gradle
+++ b/gradle/java-plugins.gradle
@@ -8,6 +8,12 @@ apply plugin:'jacoco'
 
 compileJava {
 	options.compilerArgs << '-parameters'
+    //options.compilerArgs << '-Xlint:unchecked'
+}
+
+compileTestJava {
+	options.compilerArgs << '-parameters'
+	//options.compilerArgs << '-Xlint:unchecked'
 }
 
 sourceCompatibility = 1.8
