--- a/gradle/projects/deployment.gradle
+++ b/gradle/projects/deployment.gradle
@@ -4,8 +4,10 @@ buildscript {
     dependencies.classpath 'com.netflix.nebula:nebula-release-plugin:4.1.0'
 }
 
+apply plugin: 'java'
 apply plugin: nebula.plugin.publishing.maven.MavenBasePublishPlugin
 apply plugin: nebula.plugin.publishing.maven.MavenResolvedDependenciesPlugin
+apply plugin: nebula.plugin.publishing.maven.MavenNebulaPublishPlugin
 apply plugin: nebula.plugin.publishing.publications.JavadocJarPlugin
 apply plugin: nebula.plugin.publishing.publications.SourceJarPlugin
 apply plugin: nebula.plugin.release.ReleasePlugin
