--- a/gradle/projects/deployment.gradle
+++ b/gradle/projects/deployment.gradle
@@ -10,6 +10,7 @@ apply plugin: nebula.plugin.publishing.maven.MavenResolvedDependenciesPlugin
 apply plugin: nebula.plugin.publishing.maven.MavenNebulaPublishPlugin
 apply plugin: nebula.plugin.publishing.publications.JavadocJarPlugin
 apply plugin: nebula.plugin.publishing.publications.SourceJarPlugin
+apply plugin: nebula.plugin.publishing.publications.TestJarPlugin
 apply plugin: nebula.plugin.release.ReleasePlugin
 
 publishing {
