--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext.versions += [
     metrics      : '3.1.2',
     metricsguice : '3.1.3',
     okhttp       : '3.3.1',
+    strata       : '1.1.2'
 ]
 
 dependencies {
@@ -38,8 +39,8 @@ dependencies {
         "io.dropwizard.metrics:metrics-servlets:${versions.metrics}",
         "com.palominolabs.metrics:metrics-guice:${versions.metricsguice}",
         "org.jasypt:jasypt:1.9.2",
-        "com.opengamma.strata:strata-basics:1.0.0",
-        "com.opengamma.strata:strata-product:1.0.0",
+        "com.opengamma.strata:strata-basics:${versions.strata}",
+        "com.opengamma.strata:strata-product:${versions.strata}",
         "com.squareup.okhttp3:okhttp:${versions.okhttp}"
     )
 
