--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/ro
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/root/test-reports.gradle"
 
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/java/java-plugins.gradle"
-apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/java/dependencies.gradle"
+apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/develop/java/dependencies.gradle"
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/java/integration-test.gradle"
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/java/sonarqube.gradle"
 
@@ -14,10 +14,6 @@ group = 'com.acuo.collateral'
 ext.versions += [
     eclipselink  : '2.6.3',
     resteasy     : '3.0.20.Final',
-    guice        : '4.0',
-    metrics      : '3.1.2',
-    metricsguice : '3.1.3',
-    okhttp       : '3.3.1',
     strata       : '1.1.2'
 ]
 
@@ -27,27 +23,14 @@ dependencies {
         "com.google.code.findbugs:jsr305:3.0.1",
         "org.eclipse.jetty:jetty-servlet:9.3.5.v20151012",
         "org.eclipse.persistence:eclipselink:${versions.eclipselink}",
-        "com.google.inject:guice:${versions.guice}",
-        "com.google.inject.extensions:guice-servlet:${versions.guice}",
-        "com.google.inject.extensions:guice-multibindings:${versions.guice}",
-        "com.google.inject.extensions:guice-assistedinject:${versions.guice}",
         "org.jboss.resteasy:resteasy-jaxrs:${versions.resteasy}",
         "org.jboss.resteasy:resteasy-guice:${versions.resteasy}",
-        "ch.qos.logback:logback-access:${versions.logback}",
-        "io.dropwizard.metrics:metrics-core:${versions.metrics}",
-        "io.dropwizard.metrics:metrics-jvm:${versions.metrics}",
-        "io.dropwizard.metrics:metrics-servlets:${versions.metrics}",
-        "com.palominolabs.metrics:metrics-guice:${versions.metricsguice}",
         "org.jasypt:jasypt:1.9.2",
         "com.opengamma.strata:strata-basics:${versions.strata}",
-        "com.opengamma.strata:strata-product:${versions.strata}",
-        "com.squareup.okhttp3:okhttp:${versions.okhttp}"
+        "com.opengamma.strata:strata-product:${versions.strata}"
     )
 
     testCompile(
-        "com.tngtech.java:junit-dataprovider:1.10.4",
-        "org.apache.httpcomponents:httpclient:4.3.3",
-        "org.easymock:easymock:3.3",
-        "com.squareup.okhttp3:mockwebserver:${versions.okhttp}",
+        "org.apache.httpcomponents:httpclient:4.3.3"
     )
 }
