--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
             "org.jboss.resteasy:resteasy-guice:${versions.resteasy}",
             "org.jasypt:jasypt:1.9.2",
             "com.opengamma.strata:strata-basics:${versions.strata}",
-            "com.opengamma.strata:strata-product:${versions.strata}"
+            "com.opengamma.strata:strata-product:${versions.strata}",
+            "com.thetransactioncompany:cors-filter:2.5"
     )
 
     testCompile(
