updated gradle wrapper jar and scripts

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/ro
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/root/gradle-wrapper.gradle"
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/root/profiles-config.gradle"
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/root/deployment.gradle"
-apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/root/test-reports.gradle"
+apply from: "file:///home/hicham/Projects/acuo/gradle-plugins/root/test-reports.gradle"
 
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/java/java-plugins.gradle"
 apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/java/dependencies.gradle"
