--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,13 @@ apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/ja
 group = 'com.acuo.collateral'
 
 ext.versions += [
+        model        : '0.1.0-SNAPSHOT',
         eclipselink  : '2.6.3',
         strata       : '1.3.3'
 ]
 
 dependencies {
+    compile("com.acuo.collateral:acuo-model:${versions.model}") { changing = true }
     compile(
             "org.joda:joda-convert:1.9",
             "com.google.code.findbugs:jsr305:3.0.1",
