--- a/build.gradle
+++ b/build.gradle
@@ -12,27 +12,72 @@ apply from: "https://raw.githubusercontent.com/anaxo-io/gradle-plugins/master/ja
 group = 'com.acuo.collateral'
 
 ext.versions += [
-        model        : '0.1.0-SNAPSHOT',
-        eclipselink  : '2.6.3',
-        strata       : '1.3.3'
+        model        : '0.1.0-SNAPSHOT'
 ]
 
 dependencies {
-    compile("com.acuo.collateral:acuo-model:${versions.model}") { changing = true }
-    compile(
-            "org.joda:joda-convert:1.9",
-            "com.google.code.findbugs:jsr305:3.0.1",
-            "org.eclipse.jetty:jetty-servlet:9.3.5.v20151012",
-            "org.eclipse.persistence:eclipselink:${versions.eclipselink}",
-            "org.jasypt:jasypt:1.9.2",
-            "com.opengamma.strata:strata-basics:${versions.strata}",
-            "com.opengamma.strata:strata-product:${versions.strata}",
-            "com.thetransactioncompany:cors-filter:2.5",
-            "com.hazelcast:hazelcast:3.8"
+    implementation(
+            "com.acuo.collateral:acuo-model:${versions.model}"
+    ) { changing = true }
+
+    implementation(
+            "org.eclipse.jetty:jetty-servlet:${versions.jetty_servlet}"
     )
 
-    testCompile(
-            "org.apache.httpcomponents:httpclient:4.3.3",
+    implementation (
+            "org.jboss.resteasy:resteasy-jaxrs:${versions.resteasy}",
+            "org.jboss.resteasy:resteasy-guice:${versions.resteasy}",
+    )
+
+    implementation(
+            "com.hazelcast:hazelcast:${versions.hazelcast}"
+    )
+
+    implementation(
+            "com.google.inject:guice:${versions.guice}",
+            "com.google.inject.extensions:guice-multibindings:${versions.guice}",
+            "com.google.inject.extensions:guice-servlet:${versions.guice}",
+            "com.google.inject.extensions:guice-assistedinject:${versions.guice}",
+            "com.smokejumperit.guice:core:${versions.smokejumperit}"
+    )
+
+    implementation(
+            "io.dropwizard.metrics:metrics-core:${versions.metrics}",
+            "io.dropwizard.metrics:metrics-healthchecks:${versions.metrics}",
+            "io.dropwizard.metrics:metrics-jvm:${versions.metrics}",
+            "io.dropwizard.metrics:metrics-servlets:${versions.metrics}",
+            "io.dropwizard.metrics:metrics-annotation:${versions.metrics}",
+            "com.palominolabs.metrics:metrics-guice:${versions.metricsguice}"
+    )
+
+    implementation(
+            "com.squareup.okhttp3:okhttp:${versions.okhttp}",
+            "org.jasypt:jasypt:${versions.jasypt}",
+            "com.thetransactioncompany:cors-filter:${versions.cors_filter}",
+            "com.google.code.findbugs:jsr305:3.0.1",
+            "ch.qos.logback:logback-access:${versions.logback}",
+            "org.eclipse.persistence:eclipselink:${versions.eclipselink}"
+    )
+
+    implementation(
+            "javax.servlet:javax.servlet-api:3.1.0",
+            "javax.annotation:javax.annotation-api:1.2"
+    )
+
+    implementation("org.slf4j:jul-to-slf4j:${versions.slf4j}")
+
+    testImplementation (
+            "com.tngtech.java:junit-dataprovider:${versions.tngtech}",
+            "com.squareup.okhttp3:mockwebserver:${versions.okhttp}",
+            "org.easymock:easymock:${versions.easymock}",
             "org.slf4j:log4j-over-slf4j:${versions.slf4j}"
+    )
+
+    testRuntimeOnly (
+            "ch.qos.logback:logback-classic:${versions.logback}",
+            "ch.qos.logback:logback-access:${versions.logback}",
+            "org.slf4j:log4j-over-slf4j:${versions.slf4j}",
+            "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
+            "org.slf4j:jul-to-slf4j:${versions.slf4j}"
     )
 }
