--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,30 @@ dependencies {
     ) { changing = true }
 
     implementation(
-            "org.eclipse.jetty:jetty-servlet:${versions.jetty_servlet}"
+            "org.eclipse.jetty:jetty-servlet:${versions.jetty_servlet}",
+            "org.eclipse.jetty:jetty-continuation:${versions.jetty_servlet}",
+            "org.eclipse.jetty.websocket:websocket-server:${versions.jetty_servlet}",
+            "org.eclipse.jetty.websocket:javax-websocket-server-impl:${versions.jetty_servlet}"
     )
 
     implementation (
             "org.jboss.resteasy:resteasy-jaxrs:${versions.resteasy}",
             "org.jboss.resteasy:resteasy-guice:${versions.resteasy}",
     )
+
+    implementation (
+            "org.atmosphere:atmosphere-guice:2.4.5",
+            "org.atmosphere:atmosphere-annotations:2.4.14",
+            "com.ning:async-http-client:1.9.40"
+    )
+
+    implementation (
+            "javax.websocket:javax.websocket-api:1.1"
+    )
+
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.5.0'
+    implementation group: 'io.swagger', name: 'swagger-jaxrs', version: '1.5.17'
 
     implementation(
             "com.hazelcast:hazelcast:${versions.hazelcast}"
